<resources>
    <string name="app_name">NetflixPlus</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="log_in_now">I already have an account</string>
    <string name="register_now">I don\'t have an account yet</string>
    <string name="logout">Logout</string>
    <string name="repeat_password">Repeat password</string>
    <string name="forgot_password">Forgot my password</string>
    <string name="welcome_to_netflixplus">Welcome to NetflixPlus</string>
    <string name="background_image_description">background image</string>
    <string name="netflixplus_capital">NetflixPlus</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="download_starting">Starting download...</string>
        <string name="download_progress">Downloading: %d%%</string>
        <string name="download_complete">Download completed: %s</string>
        <string name="download_failed">Download failed: %s</string>
        <string name="hd_quality_selected">HD Quality Selected</string>
        <string name="sd_quality_selected">SD Quality Selected</string>
        <string name="duration_format">%d min</string>
</resources>