<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/grey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:text="@string/register"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"

        app:boxStrokeErrorColor="@color/red"
        app:errorTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:endIconMode="password_toggle"
        android:layout_marginTop="10dp"
        app:helperText="Minimum of 6 characters"

        app:boxStrokeErrorColor="@color/red"
        app:errorTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/repeat_password_layout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        app:endIconMode="password_toggle"
        android:layout_marginTop="10dp"

        app:boxStrokeErrorColor="@color/red"
        app:errorTextColor="@color/red">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeat_password"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="30sp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/register_button"
        android:text="@string/register"
        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        android:layout_marginTop="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/loginNow"
        android:text="@string/log_in_now"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:gravity="center"
        android:layout_marginTop="40dp" />

</LinearLayout>
